# Pick-Place

./: .gitignore  Makefile  README.md  env.sh  grasp_result.json  setup_project.sh
Grounded-SAM-2/: grounded_sam2_local_demo.py
Grounded-SAM-2/grounding_dino/: setup.py
Grounded-SAM-2/grounding_dino/groundingdino/util/: get_tokenlizer.py
data/images/: camera.json
docs/: ERROR_CODES.md  STARTUP_GUIDE.md
docs/data/: cam2end.csv  pose.csv  pose_copy.csv
docs/data/test/: camera.json  camera_rm.json  capture_intrinsics.json
graspnet-baseline/: requirements.txt
graspnet-baseline/dataset/: graspnet_dataset.py
graspnet-baseline/graspnetAPI/graspnetAPI/: __init__.py
graspnet-baseline/models/: graspnet.py
src/grasp_py/: package.xml  setup.cfg  setup.py
src/grasp_py/grasp_py/: grasp_client.py
src/grasp_py/launch/: grasp_pipeline.launch.py
src/grasp_srv_interface/: CMakeLists.txt  package.xml
src/grasp_srv_interface/srv/: Camera.srv  Graspnet.srv  Gripper.srv  GroundedSam.srv  Move.srv  TriggerGrasp.srv
src/graspnet_py/: package.xml  setup.cfg  setup.py
src/graspnet_py/graspnet_py/: graspnet_server.py
src/grounded_sam_py/: package.xml  setup.cfg  setup.py
src/grounded_sam_py/grounded_sam_py/: grounded_sam_server.py
src/socket_node/: package.xml  setup.cfg  setup.py
src/socket_node/socket_node/: socket_client.py  socket_server.py
